fix: sign-up button align, header links jump, 1px 1st screen

--- a/webdev/style.css
+++ b/webdev/style.css
@@ -53,7 +53,7 @@ h2 {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;   
-    height: 100vh;
+    height: 744px;
     background: url(assets/images/bg-image-wrapper.png) no-repeat center;
     background-size: auto 100%;
 }
@@ -84,6 +84,7 @@ header {
 
 Li {
     padding-bottom: 2px;
+    border-bottom: 1px solid transparent;
 }
 
 li > a {
@@ -324,9 +325,7 @@ form > button {
     width: 66px;
     padding: 0;
     margin-left: -5px;
-}
-
-button > span {
+    padding-top: 2px;
 }
 
 #form > img {
